--- a/README
+++ b/README
@@ -1,34 +1,11 @@
-CakePHP is a rapid development framework for PHP which uses commonly known design patterns like Active Record, Association Data Mapping, Front Controller and MVC. Our primary goal is to provide a structured framework that enables PHP users at all levels to rapidly develop robust web applications, without any loss to flexibility.
+Adrotator
+====================
 
-The Cake Software Foundation - promoting development related to CakePHP
-http://cakefoundation.org/
+Adrotator is a 2 part system.
 
-CakePHP - the rapid development PHP framework
-http://www.cakephp.org
+1) A Webapp simple advertisement management system built on cakephp. The webapp exposes a json 
+service that returns advertisment data.
 
-Cookbook - user documentation for learning about CakePHP
-http://book.cakephp.org
+2) A jQuery plugin that retrieves data from the json interface and renders advertisement in a webpage
 
-API - quick reference to CakePHP
-http://api.cakephp.org
 
-The Bakery - everything CakePHP
-http://bakery.cakephp.org
-
-The Show - live and archived podcasts about CakePHP and more
-http://live.cakephp.org
-
-CakePHP Google Group - community mailing list and forum
-http://groups.google.com/group/cake-php
-
-#cakephp on irc.freenode.net - chat with CakePHP developers
-irc://irc.freenode.net/cakephp
-
-CakeForge - open development for CakePHP
-http://cakeforge.org
-
-CakePHP gear
-http://www.cafepress.com/cakefoundation
-
-Recommended Reading
-http://astore.amazon.com/cakesoftwaref-20/
